# nectar

./: .clangd  AGENTS.md  CMakeLists.txt  LICENSE  README  README.md  pyproject.toml
arch-linux/: PKGBUILD
matlab/: calibrate.m  calibration.txt  previewbin.m
matlab2/: demosaic.m  meanshift.m
python/: preview.py
src/: capture.cpp  demosaic.cpp  main.cpp  review.cpp  review.hpp  utils.cpp  utils.hpp
